# firestation-clustering

./: .gitignore  README.md  config.example.yaml  pyproject.toml
experiment/Bochum/: final_results.md
experiment/Bochum/driving-time-optimized/True/: results.json
experiment/Bochum/driving-time/False/: results.json
experiment/Bochum/driving-time/True/: results.json
experiment/Bochum/euclid/False/: results.json
experiment/Bochum/euclid/True/: results.json
experiment/Bochum/haversine/False/: results.json
experiment/Bochum/haversine/True/: results.json
experiment/fires_kmeans/: fires_uniform.txt  fires_weighted.txt
experiment/fires_metric/: fires_uniform.txt  fires_weighted.txt
experiment2/Bochum/driving-time/True/: results.json
experiment2/Bochum/euclid/False/: results.json
firestation_clustering/: commands_handler.py  helper.py  json_encoder.py  main.py  mapbox.py  maps.py  results.py
tests/: test_helper.py  test_pass.py
