[tool.poetry]
name = "firestation-clustering"
version = "0.1.0"
description = ""
authors = ["kulgg <75735874+kulgg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "firestation_clustering"}]

[tool.poetry.scripts]
x = "firestation_clustering.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
