[tool.poetry]
name = "firestation-clustering"
version = "0.1.0"
description = ""
authors = ["kulgg <75735874+kulgg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "firestation_clustering"}]

[tool.poetry.scripts]
x = "firestation_clustering.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
googlemaps = "^4.7.3"
scikit-learn = "^1.2.0"
fire = "^0.5.0"
geojson = "^2.5.0"
haversine = "^2.7.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
